# graphics-project

./: CMakeLists.txt  README.md  box.obj~  color.fs  color.vs  element.fs  element.vs  light.h  main.cpp  material.fs  material.h  material.vs  obj_mesh.cpp  obj_mesh.h  skybox.cpp  skybox.fs  skybox.h  skybox.vs  texture.fs  texture.h  texture.vs  tiger.mtl  viewer.cpp  viewer.h
